Delete not necessary

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Путешествие по Европе</title>
+    <title>VaccInvest</title>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="ico/favicon.ico">
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
@@ -15,14 +15,18 @@
     <header class="page-header">
       <picture>
         <img class="logo" src="img/logo.svg" width="57" height="22" alt="Way логотип">
+        <P>VaccInvest</P>
       </picture>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#places">О путешествии</a></li>
-          <li class="main-nav__item"><a href="#price">Цены</a></li>
+          <li class="main-nav__item"><a href="#">Про проект</a></li>
+          <li class="main-nav__item"><a href="#">Статистика</a></li>
+          <li class="main-nav__item"><a href="#">Акции</a></li>
+          <li class="main-nav__item"><a href="#">Калькулятор</a></li>
+          <li class="main-nav__item"><a href="#">Преимущества</a></li>
         </ul>
         <div class="phone phone--only-desktop">
-          <a class="phone__link" href="tel:+749978468446">+7 (499) -784-684-46</a>
+          <a class="phone__link" href="#">Начать зарабатывать</a>
         </div>
         <button class="main-nav__toggle" type="button">
           <span class=" visually-hidden">Открыть меню</span>
@@ -32,300 +36,10 @@
 
     <main class="main">
       <div class="hero">
-        <div class="hero__top-part">
-          <h1 class="hero__title">Путешествие по Европе</h1>
-          <div class="hero__bottom-part">
-            <p class="hero__about">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также потрясающая красота природы.</p>
-            <a class="button button--tablet-w250 button--mobile-w288" href="#tabs">смотреть тур</a>
-          </div>
-        </div>
+
       </div>
 
-      <section class="places" id="places">
-        <div class="places__big-fotos">
-          <div class="places__info">
-            <h2 class="places__title">Места посещения</h2>
-            <div class="orange-line orange-line--w229-h4"></div>
-            <p class="places__about">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
-          </div>
-          <ul class="places__list">
-            <li class="places__item">
-              <a href="#greece">
-                <picture>
-                  <source type="image/webp" srcset="img/greece@1x.webp 1x, img/greece@2x.webp 2x">
-                  <img class="places__img" src="img/greece@1x.jpg" srcset="img/greece@2x.jpg 2x" width="350" height="430" alt="Пейзаж Греции">
-                </picture>
-                <div class="places__state">
-                  <h3 class="places__name">Греция</h3>
-                </div>
-              </a>
-            </li>
 
-            <li class="places__item">
-              <a href="#albania">
-                <picture>
-                  <source type="image/webp" srcset="img/albania@1x.webp 1x, img/albania@2x.webp 2x">
-                  <img class="places__img" src="img/albania@1x.jpg" srcset="img/albania@2x.jpg 2x" width="350" height="430" alt="Пейзаж Албании">
-                </picture>
-                <div class="places__state">
-                  <h3 class="places__name">Албания</h3>
-                </div>
-              </a>
-            </li>
-
-            <li class="places__item">
-              <a href="#macedonia">
-                <picture>
-                  <source type="image/webp" srcset="img/macedonia@1x.webp 1x, img/macedonia@2x.webp 2x">
-                  <img class="places__img" src="img/macedonia@1x.jpg" srcset="img/macedonia@2x.jpg 2x" width="350" height="430" alt="Пейзаж Македонии">
-                </picture>
-                <div class="places__state">
-                  <h3 class="places__name">Македония</h3>
-                </div>
-              </a>
-            </li>
-
-            <li class="places__item">
-              <a href="#montenegro">
-                <picture>
-                  <source type="image/webp" srcset="img/montenegro@1x.webp 1x, img/montenegro@2x.webp 2x">
-                  <img class="places__img" src="img/montenegro@1x.jpg" srcset="img/montenegro@2x.jpg 2x" width="350" height="430" alt="Пейзаж Черногории">
-                </picture>
-                <div class="places__state">
-                  <h3 class="places__name">Черногория</h3>
-                </div>
-              </a>
-            </li>
-
-            <li class="places__item">
-              <a href="#croatia">
-                <picture>
-                  <source type="image/webp" srcset="img/croatia@1x.webp 1x, img/croatia@2x.webp 2x">
-                  <img class="places__img" src="img/croatia@1x.jpg" srcset="img/croatia@2x.jpg 2x" width="350" height="430" alt="Пейзаж Хорватии">
-                </picture>
-                <div class="places__state">
-                  <h3 class="places__name">Хорватия</h3>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="placeces__more-information">
-          <div class="places-tab" id="tabs">
-            <div class="places-tab__tabList">
-              <div class="places-tab__tabItem places-tab__tabItem--active">Греция</div>
-              <div class="places-tab__tabItem">Албания</div>
-              <div class="places-tab__tabItem places-tab__tabItem--mobile-none">Македония</div>
-              <div class="places-tab__tabItem places-tab__tabItem--mobile-none">Черногория</div>
-              <div class="places-tab__tabItem places-tab__tabItem--tablet-none">Хорватия</div>
-            </div>
-
-            <div class="places-tab__contentList">
-              <div class="places-tab__contentItem places-tab__contentItem--active">
-                <div class="places-tab__wrapper">
-                  <div class="places-tab__text">
-                    <h3 class="places-tab__title">Греция</h3>
-                    <div class="orange-line orange-line--w175-h3"></div>
-                    <p class="places-tab__about">На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал.
-                      Название его «Метеора» буквально переводится как «висящие в воздухе».
-                      Этот монастырь основная цель нашего путешествия в Греции.
-                      После покарения скал из песчанника и обломочной горной породы, достигающих в высоту 600 метров,
-                      наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры.</p>
-                    <button class="button button--tablet-w250 button--mobile-w288">купить тур сейчас</button>
-                  </div>
-
-                  <picture>
-                    <source type="image/webp" srcset="img/greece@1x.webp 1x, img/greece@2x.webp 2x">
-                    <img class="places-tab__img" src="img/greece@1x.jpg" srcset="img/greece@2x.jpg 2x" width="430" height="569" alt="Пейзаж Греции">
-                  </picture>
-                </div>
-
-                <div class="review">
-                  <h3 class="review__title">Отзывы</h3>
-                  <div class="orange-line orange-line--w68-h1-mb20 orange-line--tablet-block"></div>
-                  <p class="review__about">Метеоры в Греции можно сравнить разве что с Монсерратт в Испании.
-                    Такие же высоченные скалы. Но здесь потрясает масштаб.
-                    Огромная территория, высоко в горах.
-                    Ощущение такое, как будто стоишь на краю света!</p>
-                  <span class="review__author review__author--greece">Влада Голицина</span>
-                </div>
-              </div>
-
-              <div class="places-tab__contentItem">
-                <div class="places-tab__wrapper">
-                  <div class="places-tab__text">
-                    <h3 class="places-tab__title">Албания</h3>
-                    <div class="orange-line orange-line--w175-h3"></div>
-                    <p class="places-tab__about">В Албании мы посетим Курорт Ксамиль.
-                      Этот курорт поразит вас чистейшей водой и удивительным пляжем.
-                      Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и слишком крупный песок.
-                      Однако, присмотревшись, можно понять, что это не песок, а камни, перетёртые до такого мелкого состояния. </p>
-                    <button class="button button--tablet-w250 button--mobile-w288">купить тур сейчас</button>
-                  </div>
-
-                  <picture>
-                    <source type="image/webp" srcset="img/albania@1x.webp 1x, img/albania@2x.webp 2x">
-                    <img class="places-tab__img" src="img/albania@1x.jpg" srcset="img/albania@2x.jpg 2x" width="430" height="569" alt="Пейзаж Албании">
-                  </picture>
-                </div>
-
-                <div class="review">
-                  <h3 class="review__title">Отзывы</h3>
-                  <div class="orange-line orange-line--w68-h1-mb20  orange-line--tablet-block"></div>
-                  <p class="review__about">Замечательный курорт, обязательно стоит посетить.
-                    В следующий раз возьму с собой сестру, чтобы тоже смогла вкусить все красоты природы :)</p>
-                  <span class="review__author review__author--albania">Маришка</span>
-                </div>
-              </div>
-
-              <div class="places-tab__contentItem">
-                <div class="places-tab__wrapper">
-                  <div class="places-tab__text">
-                    <h3 class="places-tab__title">Македония</h3>
-                    <div class="orange-line orange-line--w175-h3"></div>
-                    <p class="places-tab__about">В Македонии нашей целью будет посетить Палаошник,
-                      который расположился в удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни.
-                      А также мы заберемся на вершину горы Татичев Камен где находится археологический памятник Кокино в длину около 100 метров.</p>
-                    <button class="button button--tablet-w250 button--mobile-w288">купить тур сейчас</button>
-                  </div>
-
-                  <picture>
-                    <source type="image/webp" srcset="img/macedonia@1x.webp 1x, img/macedonia@2x.webp 2x">
-                    <img class="places-tab__img" src="img/macedonia@1x.jpg" srcset="img/macedonia@2x.jpg 2x" width="430" height="569" alt="Пейзаж Македонии">
-                  </picture>
-                </div>
-
-                <div class="review">
-                  <h3 class="review__title">Отзывы</h3>
-                  <div class="orange-line orange-line--w68-h1-mb20  orange-line--tablet-block"></div>
-                  <p class="review__about">Я бы сказал необычное старое здание. В архитектуре я не разбираюсь,
-                    но подъем в гору был очень веселым так как люди оказались легкими и заводными.
-                    Красота природы впечатлила, особенно после долгого пути в гору.</p>
-                  <span class="review__author review__author--macedonia">Михаил Кузьмин</span>
-                </div>
-              </div>
-
-              <div class="places-tab__contentItem">
-                <div class="places-tab__wrapper">
-                  <div class="places-tab__text">
-                    <h3 class="places-tab__title">Черногория</h3>
-                    <div class="orange-line orange-line--w175-h3"></div>
-                    <p class="places-tab__about">Черногория удивит нас самым большим в Европе каньоном реки Тара,
-                      который в некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех.
-                      При этом длина каньона составляет 80 км. </p>
-                    <button class="button button--tablet-w250 button--mobile-w288">купить тур сейчас</button>
-                  </div>
-
-                  <picture>
-                    <source type="image/webp" srcset="img/montenegro@1x.webp 1x, img/montenegro@2x.webp 2x">
-                    <img class="places-tab__img" src="img/montenegro@1x.jpg" srcset="img/montenegro@2x.jpg 2x" width="430" height="569" alt="Пейзаж Черногории">
-                  </picture>
-                </div>
-
-                <div class="review">
-                  <h3 class="review__title">Отзывы</h3>
-                  <div class="orange-line orange-line--w68-h1-mb20  orange-line--tablet-block"></div>
-                  <p class="review__about">Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем советую</p>
-                  <span class="review__author review__author--montenegro">Анастасия Мей</span>
-                </div>
-              </div>
-
-              <div class="places-tab__contentItem">
-                <div class="places-tab__wrapper">
-                  <div class="places-tab__text">
-                    <h3 class="places-tab__title">Хорватия</h3>
-                    <div class="orange-line orange-line--w175-h3"></div>
-                    <p class="places-tab__about">В Хорватии мы посетим необычайную пещеру названную Бередине.
-                      Ее подземный мир увлечет вас на 80-ти метровую глубину через 5 освещенных залов,
-                      украшенных удивительными нерукотворными скульптурами —  сталактитами и сталагмитами —
-                      формировавшимися тысячи и тысячи лет.</p>
-                    <button class="button button--tablet-w250 button--mobile-w288">купить тур сейчас</button>
-                  </div>
-
-                  <picture>
-                    <source type="image/webp" srcset="img/croatia@1x.webp 1x, img/croatia@2x.webp 2x">
-                    <img class="places-tab__img" src="img/croatia@1x.jpg" srcset="img/croatia@2x.jpg 2x" width="430" height="569" alt="Пейзаж Хорватии">
-                  </picture>
-                </div>
-
-                <div class="review">
-                  <h3 class="review__title">Отзывы</h3>
-                  <div class="orange-line orange-line--w68-h1-mb20  orange-line--tablet-block"></div>
-                  <p class="review__about">Мы поехали всей семьей, я, моя жена и родители.
-                    Пещера просто незабываема! А то, что все это формировалось тысячелетиями, мега необычно.
-                    Первоначально даже не верилось, но натур ни с чем не спутать по итогу :)</p>
-                  <span class="review__author review__author--croatia">Владимир Мулицин</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="price" class="price">
-          <div class="price__variant">
-            <div class="price__about">
-              <h3 class="price__title">Комплексный $1999</h3>
-              <p>Ознакомьтесь с перечнем того, что входит в данный пакет </p>
-            </div>
-            <div class="price__features">
-              <ul class="price__list">
-                <li class="price__item">Разработанный маршрут с гидом группы</li>
-                <li class="price__item">Перелет, трансфер и проживание в отелях</li>
-                <li class="price__item">Завтраки, ужины в отелях и ланчи на природе</li>
-                <li class="price__item">Экскурсии по удивительно красивым местам Европы</li>
-              </ul>
-            </div>
-            <button class="button button--extended">купить тур сейчас</button>
-          </div>
-
-          <div class="price__variant">
-            <div class="price__about">
-              <h3 class="price__title">Экономный $1399</h3>
-              <p>Ознакомьтесь с перечнем того, что входит в данный пакет </p>
-            </div>
-            <div class="price__features">
-              <ul class="price__list">
-                <li class="price__item">Разработанный маршрут с гидом группы</li>
-                <li class="price__item">Перелет и трансфер</li>
-                <li class="price__item">Проживание в хостелах при отелях</li>
-                <li class="price__item">Только завтраки в отелях</li>
-                <li class="price__item">Экскурсии по удивительно красивым местам Европы</li>
-              </ul>
-            </div>
-            <button class="button button--extended">купить тур сейчас</button>
-          </div>
-
-          <div class="price__more">
-            <h3>Цены</h3>
-            <div class="orange-line orange-line--w175-h3"></div>
-            <p>Специально для Вас  мы разработали 2 пакета цен с разными условиями,
-              отталкиваясь от Ваших потребностей и возможностей.
-              Выберите для себя лучший вариант отпуска и отдохните на все 100%! </p>
-            <span>Свяжитесь с нами</span>
-
-            <div class="phone">
-              <a class="phone__link phone__link--black" href="tel:+749978468446">+7 (499) -784-684-46</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="feedback">
-        <form class="feedback__form">
-          <h3 class="feedback__title">У Вас остались вопросы?</h3>
-          <p class="feedback__about">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
-          <div class="feedback__inputs">
-            <label> <span class="visually-hidden">Контактный телефон</span>
-              <input class="feedback__input" type="tel" name="tel" id="tel" placeholder="+7 Введите 10 цифр номера">
-            </label>
-            <label> <span class="visually-hidden">Электронная почта</span>
-              <input class="feedback__input" type="email" name="email" id="email" placeholder="E-mail">
-            </label>
-          </div>
-          <button class="button button--w176-h50 button--tablet-w250" type="submit">Отправить</button>
-        </form>
-      </section>
     </main>
 
     <footer class="footer">
@@ -339,39 +53,9 @@
             <li class="next-travel__item">Барселона</li>
             <li class="next-travel__item">Пальма</li>
           </ul>
-          <ul class="next-travel__list">
-            <li class="next-travel__item">Сардиния</li>
-            <li class="next-travel__item">Палермо</li>
-            <li class="next-travel__item">Катания</li>
-            <li class="next-travel__item">Неаполь</li>
-            <li class="next-travel__item">Рим</li>
-          </ul>
-          <ul class="next-travel__list next-travel__list--mobile-span2">
-            <li class="next-travel__item">Корс</li>
-            <li class="next-travel__item">Ницца</li>
-            <li class="next-travel__item">Монако</li>
-            <li class="next-travel__item">Динь-ле-Бен</li>
-            <li class="next-travel__item">Гренобль</li>
-          </ul>
         </div>
       </section>
 
-      <section class="contacts">
-        <h3>Наши контакты</h3>
-        <div class="mail">
-          <!-- <svg class="phone__icon" width="30" height="30">
-            <use xlink:href="img/sprite.svg#phone-icon"></use>
-          </svg> -->
-          <a class="mail__link" href="puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a>
-        </div>
-
-        <div class="phone phone--margin-0">
-          <!-- <svg class="phone__icon" width="30" height="30">
-            <use xlink:href="img/sprite.svg#phone-icon"></use>
-          </svg> -->
-          <a class="phone__link phone__link--orange" href="tel:+749978468446">+7 (499) -784-684-46</a>
-        </div>
-      </section>
 
       <section class="corporate-travel">
         <h3 class="corporate-travel__title">Корпоративные путешествия</h3>
