--- a/source/index.html
+++ b/source/index.html
@@ -25,8 +25,8 @@
           <li class="main-nav__item"><a href="#">Калькулятор</a></li>
           <li class="main-nav__item"><a href="#">Преимущества</a></li>
         </ul>
-        <div class="phone phone--only-desktop">
-          <a class="phone__link" href="#">Начать зарабатывать</a>
+        <div class="main-nav__button">
+          <a class="" href="#">Начать зарабатывать</a>
         </div>
         <button class="main-nav__toggle" type="button">
           <span class=" visually-hidden">Открыть меню</span>
