Main html part1

--- a/source/index.html
+++ b/source/index.html
@@ -37,10 +37,10 @@
       </nav>
     </header>
 
-    <main class="main">
+    <main class="page-main">
       <section class="hero">
         <div class="hero__img">
-          <img src="img/hero.jpg" width="328" height="184" alt="Лаборант держит пробирку">
+          <img src="img/hero.jpg" width="272" height="184" alt="Лаборант держит пробирку">
         </div>
         <div class="herro__form">
           <h1>Получайте стабильные дивиденды от 80% в месяц</h1>
@@ -61,12 +61,193 @@
         </div>
       </section>
 
-      <section class="profitability">
+      <section class="main-section">
         <h2 class="heading2">Доходность акций за 2021 год</h2>
         <div class="vaccine">
-
+          <div class="vaccine__logo">Moderna</div>
+          <div class="vaccine__name">Moderna</div>
+          <div class="vaccine__percent">+313.1%</div>
+        </div>
+        <div class="vaccine">
+          <div class="vaccine__logo">AstraZeneca</div>
+          <div class="vaccine__name">AstraZeneca</div>
+          <div class="vaccine__percent">+286.8%</div>
+        </div>
+        <div class="vaccine">
+          <div class="vaccine__logo">Pfizer</div>
+          <div class="vaccine__name">Pfizer</div>
+          <div class="vaccine__percent">+218.4%</div>
         </div>
       </section>
+
+      <section class="main-section">
+        <h2 class="heading2">О проекте</h2>
+        <div class="about">
+          <img src="img/chart.svg" width="272" height="300" alt="Силует планеты Земля">
+          <h3>3,5 млрд вакцинировалось</h3>
+          <P>
+            Каждый день вакцинируются около 10-100 тыс
+          </P>
+        </div>
+        <div class="about">
+          <p>
+            Акции производителей самых эффективных вакцин дорожают каждый день пандемии.
+            Вложения в ценные бумаги крупнейших фармакологических компаний обеспечивают сотням инвесторов стабильный доход.
+            Главное преимущество VaccInvest — возможность анализировать движение котировок на рынке,
+            а также определять спрос на отдельные виды вакцины.
+          </p>
+        </div>
+        <div class="about">
+          <p>
+            Использование передовых технологий помогает определить, на какую вакцину вскоре поднимется спрос,
+            а какая может потерять популярность.  Используя данные фундаментального и технического анализа,
+            участники проекта инвестируют в самые востребованные акции и зарабатывают на колебаниях курса.
+          </p>
+        </div>
+      </section>
+
+      <section class="main-section">
+        <h2 class="heading2">Прорывы и достижения</h2>
+        <div class="achievements">
+          <div class="achievements__img">
+            <img src="#" alt="Ампула с вакциной Pfizer">
+          </div>
+          <div class="achievements__about">
+            <h3>Акции Pfizer достигли исторического максимума</h3>
+            <p>Акции фармацевтической компании-производителя вакцины против COVID-19 Pfizer</p>
+            <img src="#" alt="Лого Экономическая правда">
+          </div>
+        </div>
+
+        <div class="achievements">
+          <div class="achievements__img">
+            <img src="#" alt="Ампула с вакциной Moderna">
+          </div>
+          <div class="achievements__about">
+            <h3>Moderna за квартал заработала $3 миллиарда на продаже вакцин от covid-19</h3>
+            <p>Доход компании за отчетный период составил $4,35 млрд,
+              в то время как по итогам второго квартала 2020 года Moderna показала доход всего в $67 млн.</p>
+            <img src="#" alt="Лого Лига.net">
+          </div>
+        </div>
+
+        <div class="achievements">
+          <div class="achievements__img">
+            <img src="#" alt="Ампула с вакциной Corona Vac">
+          </div>
+          <div class="achievements__about">
+            <h3>Акции разработчика вакцины от коронавируса Pfizer побили рекорд 1999 года</h3>
+            <p>На торгах во вторник, 10 августа, котировки выросли на 5,6% по сравнению с предыдущим днем, составив $48,57 за акцию.
+              Это максимальный уровень с апреля 1999 года. Тогда стоимость акций Pfizer достигла $47,39.</p>
+            <img src="#" alt="Лого РБК">
+          </div>
+        </div>
+      </section>
+
+      <section class="main-section">
+        <h2 class="heading2">Актуальный курс</h2>
+        <div class="currency">
+          <div class="currency__about">
+            <img src="#" alt="Логотип Pfizer">
+            <span>Pfizer</span>
+            <span>$50.42</span>
+          </div>
+          <div class="currency__dynamic">
+            <span>1.51%</span>
+          </div>
+        </div>
+
+        <div class="currency">
+          <div class="currency__about">
+            <img src="#" alt="Логотип AstraZeneca">
+            <span>AstraZeneca</span>
+            <span>$59.35</span>
+          </div>
+          <div class="currency__dynamic">
+            <span>1.02%</span>
+          </div>
+        </div>
+
+        <div class="currency">
+          <div class="currency__about">
+            <img src="#" alt="Логотип Moderna">
+            <span>Moderna</span>
+            <span>$401.86</span>
+          </div>
+          <div class="currency__dynamic">
+            <span>32.17%</span>
+          </div>
+        </div>
+
+        <div class="currency">
+          <div class="currency__about">
+            <img src="#" alt="Логотип Johnson & Johnson">
+            <span>Johnson & Johnson</span>
+            <span>$179.47</span>
+          </div>
+          <div class="currency__dynamic">
+            <span>0.01%</span>
+          </div>
+        </div>
+
+        <div class="currency">
+          <div class="currency__graph">
+            graph
+          </div>
+        </div>
+      </section>
+
+      <section class="main-section">
+        <h2 class="heading2">Получение прибыли от фарминдустрии</h2>
+        <div class="to-do">
+          <img src="#" alt="Иконка авторизируйтесь">
+          <h3>Авторизуйтесь</h3>
+          <p>Оставьте контактные данные в регистрационной форме на сайте.</p>
+        </div>
+
+        <div class="to-do">
+          <img src="#" alt="Иконка сообщения">
+          <h3>Ответьте на звонок аналитика</h3>
+          <p>Вас проконсультируют по работе с нашей системой</p>
+        </div>
+
+        <div class="to-do">
+          <img src="#" alt="Иконка исходящий поток">
+          <h3>Действуйте, как инвестор</h3>
+          <p>Внесите депозит и преумножайте дивиденды</p>
+        </div>
+
+        <div class="to-do">
+          <img src="#" alt="Иконка входящий поток">
+          <h3>Получайте прибыль</h3>
+          <p>Имейте стабильный доход и реинвестируйте в акции</p>
+        </div>
+      </section>
+
+      <section class="main-section">
+        <h2 class="heading2">Как работает система</h2>
+        <div class="how-it-work">
+          <p>
+            Пока внимание конкурентов приковано исключительно к разработке эффективных антител,
+            аналитики проекта ставят на разработку препаратов по борьбе с осложнениями от заболевания.
+            Выбор этого прибыльного направления подтвердил 10-летнюю квалификацию команды и приносит вкладчикам ошеломляющие результаты.
+          </p>
+          <p>
+            Проект VaccInvest - уникален тем, что анализирует больше связанных с индустрией явлений, чем кто-либо другой:
+          </p>
+          <ul>
+            <li>темпы производства и поставок медпрепаратов</li>
+            <li>актуальную социальную востребованность</li>
+            <li>влияние на внутреннюю экономику и геополитику стран</li>
+            <li>покрытие транспортных расходов</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="main-section">
+        <h2 class="heading2">Рассчитайте прибыль от своих инвестиций</h2>
+      </section>
+
 
     </main>
 
@@ -87,10 +268,7 @@
 
       <section class="corporate-travel">
         <h3 class="corporate-travel__title">Корпоративные путешествия</h3>
-        <p class="corporate-travel__about">Также вы можете заказать индивидуальное путешествие под вашу компанию.
-          Подобные туры очень сближают компанию,
-          помогают поддерживать корпоративный дух,
-          а также являются оличным времяпрепровождением</p>
+        <p class="corporate-travel__about">Также вы можете заказать </p>
       </section>
     </footer>
 
