Form top mibile styling2

--- a/source/index.html
+++ b/source/index.html
@@ -65,7 +65,9 @@
     </section>
 
     <section class="main-section">
-      <h2 class="heading2">Доходность акций за 2021 год</h2>
+      <div class="main-section__heading-wrapper">
+        <h2 class="main-section__heading">Доходность акций за 2021 год</h2>
+      </div>
       <div class="vaccine">
         <div class="vaccine__logo">Moderna</div>
         <div class="vaccine__name">Moderna</div>
