Main mobile styling

--- a/source/index.html
+++ b/source/index.html
@@ -65,40 +65,44 @@
     </section>
 
     <section class="main-section">
-      <div class="main-section__heading-wrapper">
-        <h2 class="main-section__heading">Доходность акций за 2021 год</h2>
+      <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-vaccine">
+        <h2 class="main-section__heading">Доходность исследований за&nbsp;2021&nbsp;год</h2>
       </div>
       <div class="vaccine">
-        <div class="vaccine__logo">Moderna</div>
-        <div class="vaccine__name">Moderna</div>
-        <div class="vaccine__percent">+313.1%</div>
-      </div>
-      <div class="vaccine">
-        <div class="vaccine__logo">AstraZeneca</div>
-        <div class="vaccine__name">AstraZeneca</div>
-        <div class="vaccine__percent">+286.8%</div>
-      </div>
-      <div class="vaccine">
-        <div class="vaccine__logo">Pfizer</div>
-        <div class="vaccine__name">Pfizer</div>
-        <div class="vaccine__percent">+218.4%</div>
+        <div class="vaccine__wrapper">
+          <img src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna"></img>
+          <div class="vaccine__name vaccine__name--first">Moderna</div>
+          <div class="vaccine__percent">+313.1%</div>
+        </div>
+        <div class="vaccine__wrapper">
+          <img src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca"></img>
+          <div class="vaccine__name vaccine__name--second">AstraZeneca</div>
+          <div class="vaccine__percent">+286.8%</div>
+        </div>
+        <div class="vaccine__wrapper">
+          <img src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer"></img>
+          <div class="vaccine__name vaccine__name--third">Pfizer</div>
+          <div class="vaccine__percent">+218.4%</div>
+        </div>
       </div>
     </section>
 
     <section class="main-section">
-      <h2 class="heading2">О проекте</h2>
-      <div class="about">
-        <img src="img/chart.svg" width="272" height="300" alt="Силует планеты Земля">
-        <h3>3,5 млрд вакцинировалось</h3>
-        <P>
-          Каждый день вакцинируются около 10-100 тыс
-        </P>
+      <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-about">
+        <h2 class="main-section__heading">О проекте</h2>
       </div>
       <div class="about">
-        <p>
+        <img class="about__img" src="img/chart.svg" width="300" height="302" alt="Силует планеты Земля">
+        <h3 class="about__title">3,5 млрд вакцинировалось</h3>
+        <p class="about__info">Каждый день вакцинируются около <b>10&nbsp;-&nbsp;100&nbsp;тыс</b></p>
+      </div>
+      <div class="about">
+        <p class="about__more-first">
           Акции производителей самых эффективных вакцин дорожают каждый день пандемии.
           Вложения в ценные бумаги крупнейших фармакологических компаний обеспечивают сотням инвесторов стабильный
           доход.
+        </p>
+        <p>
           Главное преимущество VaccInvest — возможность анализировать движение котировок на рынке,
           а также определять спрос на отдельные виды вакцины.
         </p>
