Main mobile styling2

--- a/source/index.html
+++ b/source/index.html
@@ -93,70 +93,48 @@
       </div>
       <div class="about">
         <img class="about__img" src="img/chart.svg" width="300" height="302" alt="Силует планеты Земля">
-        <h3 class="about__title">3,5 млрд вакцинировалось</h3>
+        <h3 class="about__title"><span>3,5&nbsp;млрд</span><br>вакцинировалось</h3>
         <p class="about__info">Каждый день вакцинируются около <b>10&nbsp;-&nbsp;100&nbsp;тыс</b></p>
       </div>
       <div class="about">
-        <p class="about__more-first">
+        <p class="about__more about__more--first">
           Акции производителей самых эффективных вакцин дорожают каждый день пандемии.
           Вложения в ценные бумаги крупнейших фармакологических компаний обеспечивают сотням инвесторов стабильный
           доход.
         </p>
-        <p>
-          Главное преимущество VaccInvest — возможность анализировать движение котировок на рынке,
-          а также определять спрос на отдельные виды вакцины.
-        </p>
-      </div>
-      <div class="about">
-        <p>
-          Использование передовых технологий помогает определить, на какую вакцину вскоре поднимется спрос,
-          а какая может потерять популярность. Используя данные фундаментального и технического анализа,
+        <p class="about__more">
+          Главное преимущество VaccInvest&nbsp;— возможность анализировать движение котировок на рынке,
+          а также определять спрос на отдельные виды вакцины. Использование передовых технологий помогает определить,
+          на какую вакцину вскоре поднимется спрос, а какая может потерять популярность.
+          Используя данные фундаментального и технического анализа,
           участники проекта инвестируют в самые востребованные акции и зарабатывают на колебаниях курса.
         </p>
       </div>
     </section>
 
     <section class="main-section">
-      <h2 class="heading2">Прорывы и достижения</h2>
-      <div class="achievements">
-        <div class="achievements__img">
-          <img src="#" alt="Ампула с вакциной Pfizer">
-        </div>
-        <div class="achievements__about">
-          <h3>Акции Pfizer достигли исторического максимума</h3>
-          <p>Акции фармацевтической компании-производителя вакцины против COVID-19 Pfizer</p>
-          <img src="#" alt="Лого Экономическая правда">
-        </div>
+      <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-achievements">
+        <h2 class="main-section__heading">Прорывы и достижения</h2>
       </div>
-
       <div class="achievements">
         <div class="achievements__img">
-          <img src="#" alt="Ампула с вакциной Moderna">
+          <img src="img/newsBlock1.png" width="311" height="296" alt="Новость с 'Экономическая правда'">
         </div>
-        <div class="achievements__about">
-          <h3>Moderna за квартал заработала $3 миллиарда на продаже вакцин от covid-19</h3>
-          <p>Доход компании за отчетный период составил $4,35 млрд,
-            в то время как по итогам второго квартала 2020 года Moderna показала доход всего в $67 млн.</p>
-          <img src="#" alt="Лого Лига.net">
-        </div>
-      </div>
 
-      <div class="achievements">
         <div class="achievements__img">
-          <img src="#" alt="Ампула с вакциной Corona Vac">
+          <img src="img/newsBlock2.png" alt="Новость с 'Лига.Нет'">
         </div>
-        <div class="achievements__about">
-          <h3>Акции разработчика вакцины от коронавируса Pfizer побили рекорд 1999 года</h3>
-          <p>На торгах во вторник, 10 августа, котировки выросли на 5,6% по сравнению с предыдущим днем, составив $48,57
-            за акцию.
-            Это максимальный уровень с апреля 1999 года. Тогда стоимость акций Pfizer достигла $47,39.</p>
-          <img src="#" alt="Лого РБК">
+
+        <div class="achievements__img">
+          <img src="img/newsBlock3.png" alt="Новость с 'РБК'">
         </div>
       </div>
     </section>
 
     <section class="main-section">
-      <h2 class="heading2">Актуальный курс</h2>
+      <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-currency">
+        <h2 class="main-section__heading">Актуальный курс</h2>
+      </div>
       <div class="currency">
         <div class="currency__about">
           <img src="#" alt="Логотип Pfizer">
